Fix right edge of graphs being cut off

--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -111,6 +111,7 @@
 
 .roc {
   height: calc(100% - 100px);
+  width: 100%;
 
   .axis {
     fill: var(--ion-color-dark);
